Moved to webpack

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,10 @@
+<!doctype html>
+<html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+</head>
+<body>
 <section id="about">
   <div id="introtext">
     <p>
@@ -113,3 +120,5 @@
   <span class="verticalstack"><i class="fa fa-at"></i>Contact</span>
   <span class="verticalstack" id="hamburgericon"><i class="fa fa-bars"></i>More</span>
 </nav>
+</body>
+</html>
