--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://pethaf.github.io/pethaf.github.io/index.html" />
+<meta http-equiv="refresh" content="0; url=http://pethaf.github.io/pethaf.github.io/build/index.html" />
